# zephyr-cmake-link-static-lib

./: CMakeLists.txt  README.md
mylib/: mylib.c  mylib.h
src/: main.c
